seems like this will be more usable in archive format

--- a/doc/todo.mdwn
+++ b/doc/todo.mdwn
@@ -5,4 +5,4 @@ post it to [[bugs]] instead. Link items to [[todo/done]] when done.
 [[inline pages="todo/* and !todo/done and !link(todo/done) and
 !link(patch) and !link(wishlist) and !todo/*/*"
 feedpages="created_after(todo/supporting_comments_via_disussion_pages)"
-actions=yes rootpage="todo" postformtext="Add a new todo item titled:" show=0]]
+actions=yes archive=yes rootpage="todo" postformtext="Add a new todo item titled:" show=0]]
