--- a/doc/todo/Allow_per-page_template_selection.mdwn
+++ b/doc/todo/Allow_per-page_template_selection.mdwn
@@ -39,3 +39,5 @@ could be accepted upstream. Joey, what do you think? And would a
 proper patch be helpful (it really just adds those lines to the right
 place).
 
+> Fully implemented as a templatefile hook and a [[plugins/pagetemplate]]
+> plugin. --[[Joey]] [[done]]
