--- a/doc/wikitemplates.mdwn
+++ b/doc/wikitemplates.mdwn
@@ -34,5 +34,8 @@ located in /usr/share/ikiwiki/templates by default.
 * `searchform.tmpl` - Used by the [[plugins/search]] plugin to add a search
   form to wiki pages.
 
+The [[plugins/pagetemplate]] plugin can allow individual pages to use a
+different template than `page.tmpl`.
+
 The [[plugins/template]] plugin also uses templates, though those
 [[templates]] are stored in the wiki.
