--- a/debian/changelog
+++ b/debian/changelog
@@ -17,8 +17,10 @@ ikiwiki (2.5) UNRELEASED; urgency=low
   * Add templatefile hook.
   * Add pagetemplate plugin, which allows changing the template used for
     a page. (Not to be confused with the hook of the same name..)
+  * Add a libdir config option to let ikiwiki load perl modules, including
+    plugins, from a user-configurable directory.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 26 Jul 2007 16:16:55 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Jul 2007 20:47:23 -0400
 
 ikiwiki (2.4) unstable; urgency=low
 
