--- a/doc/templates/links.mdwn
+++ b/doc/templates/links.mdwn
@@ -1,4 +1,4 @@
-<span class="infobox">
+<div class="infobox">
 [[ikiwiki_logo|logo/ikiwiki.png]]  
 <ul>
 <li>[[News]]</li>
@@ -7,4 +7,5 @@
 <li>[[Security]]</li>
 <li>[[Users|IkiWikiUsers]]</li>
 <li>[[Contact]]</li>
-</span>
+</ul>
+</div>
