--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ikiwiki (2.5) UNRELEASED; urgency=low
+ikiwiki (2.5) unstable; urgency=low
 
   * Wrap the editpage template in the standard misctemplate, this allows the
     pagetemplate hook to work for that page.
@@ -20,7 +20,7 @@ ikiwiki (2.5) UNRELEASED; urgency=low
   * Add a libdir config option to let ikiwiki load perl modules, including
     plugins, from a user-configurable directory.
 
- -- Joey Hess <joeyh@debian.org>  Thu, 26 Jul 2007 20:47:23 -0400
+ -- Joey Hess <joeyh@debian.org>  Thu, 26 Jul 2007 21:42:43 -0400
 
 ikiwiki (2.4) unstable; urgency=low
 
