--- a/doc/plugins/contrib/linguas.mdwn
+++ b/doc/plugins/contrib/linguas.mdwn
@@ -6,7 +6,12 @@ Linguas
 Linguas is a plugin for [ikiwiki](http://ikiwiki.info/) that
 allows translations of wiki pages.
 
-Download: [linguas.pm](http://wiki.ettin.org/files/linguas.pm) (2006-08-21).
+Download: [linguas.pm](http://ettin.org/pub/ikiwiki/linguas.pm) (2006-08-21).
+
+Note that even though it is still available for download, this plugin is no
+longer actively maintained. If you are interested in multilingual wiki pages, you
+can also take a look at other approaches such as [[todo/l10n]] or Lars Wirzenius's
+[Static website, with translations, using IkiWiki](http://liw.iki.fi/liw/log/2007-05.html#20070528b).
 
 Usage
 -----
@@ -56,7 +61,7 @@ fine, but it fails from ikiwiki.setup.)
   > but not hashes or more complex data structures. --[[Joey]]
 
   >  > Right. With this simple
-  >  > [patch](http://wiki.ettin.org/files/hash_setup.patch) it seems to
+  >  > [patch](http://ettin.org/pub/ikiwiki/hash_setup.patch) it seems to
   >  > work. However, note that 1) it only allows simple hashes, hashes of
   >  > hashes will not work (I don't think getops can handle complex hashes
   >  > anyway); 2) I don't really know when/why you call
@@ -99,15 +104,3 @@ The following fixes it:
                 }
          
                 my $otherlinguas = 'Translations:';
-
-
-Examples
---------
-
-* [Linguas](http://wiki.ettin.org/linguas.en.html). A page with the same
-content than this one.
-
-* [Hello in some languages](http://wiki.ettin.org/hello/hello.en.html). The
-translations were taken from [Hello in many
-languages](http://www.omniglot.com/language/phrases/hello.htm) and from
-the [Debian](http://www.debian.org/) website.
