web commit by sward: Correction to plugin path in --libdir option description

--- a/doc/usage.mdwn
+++ b/doc/usage.mdwn
@@ -233,7 +233,7 @@ configuration options of their own.
 
   Makes ikiwiki look in the specified directory first, before the regular perl
   library directories. For example, if you set libdir to "/home/you/.ikiwiki/",
-  you can install plugins in "/home/you/.ikiwiki/IkiWiki/Plugins/".
+  you can install plugins in "/home/you/.ikiwiki/IkiWiki/Plugin/".
 
 * --discussion, --no-discussion
 
