--- a/doc/bugs/strange_hook_id_in_skeleton.pm.mdwn
+++ b/doc/bugs/strange_hook_id_in_skeleton.pm.mdwn
@@ -1,3 +1,5 @@
 	hook(type => "savestate", id => "savestate", call => \&savestate);
 
 Shouldn't that id be "skeleton", like all the other ids? --Ethan
+
+[[done]]
