--- a/doc/bugs/weird_signature_in_match__95__included__40____41__.mdwn
+++ b/doc/bugs/weird_signature_in_match__95__included__40____41__.mdwn
@@ -3,3 +3,5 @@ Is this a bug? IkiWiki/Plugins/conditional.pm:
 `sub match_included ($$;$) { #{{{`
 
 The other match_XXX functions seem to take ($$;@). --Ethan
+
+> indeed, [[done]] --[[Joey]]
