* Various minor bug fixes for silly mistakes in the code, thanks to the   various reviewers.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ikiwiki (2.6) UNRELEASED; urgency=low
+
+  * Various minor bug fixes for silly mistakes in the code, thanks to the
+    various reviewers.
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 28 Jul 2007 17:01:35 -0400
+
 ikiwiki (2.5) unstable; urgency=low
 
   * Wrap the editpage template in the standard misctemplate, this allows the
