web commit by PatrickWinnertz: added myself to the ikiwiki users

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -68,6 +68,7 @@ Personal sites and blogs
 * [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
 * I keep my personal and project notes in a private ikiwiki - it's the perfect tool for this task. - [h01ger](http://layer-acht.org/)
 * [Nicolas Limare (nil)](http://poivron.org/~nil/)
+* [Patrick Winnertz (winnie)(https://www.der-winnie.de)
 
 Please feel free to add your own ikiwiki site!
 
