belated note about upgrades to 2.5

--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,11 @@
+ikiwiki (2.5) unstable; urgency=low
+
+  Due to some config changes in this version, wrappers need to be rebuilt on
+  upgrade. If you listed your wiki in /etc/ikiwiki/wikilist this will be
+  one automatically when the Debian package is upgraded.
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Jul 2007 17:54:40 -0400
+
 ikiwiki (2.1) unstable; urgency=low
 
   Some wikis need to be rebuilt on upgrade to this version, due to changes to
