--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ ikiwiki (2.6) UNRELEASED; urgency=low
 
   * Various minor bug fixes for silly mistakes in the code, thanks to the
     various reviewers.
+  * Fix problems with previewing in the graphviz plugin. Thanks,
+    HenrikBrixAndersen.
 
- -- Joey Hess <joeyh@debian.org>  Sat, 28 Jul 2007 17:01:35 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Jul 2007 18:34:13 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
