--- a/doc/bugs/Problems_with_graphviz.pm_plug-in.mdwn
+++ b/doc/bugs/Problems_with_graphviz.pm_plug-in.mdwn
@@ -9,21 +9,9 @@ The graphviz.pm plug-in currently attempts to read PNG data in UTF-8 mode, which
 
 It also generates image URLs relative to the page being rendered, which means the URLs wont work when previewing a graph from the CGI script.
 
-> You seem to be using an old version of ikiwiki, these preview isues have
-> been fixed for some time, and the code doesn't look like what you patch
-> in your second hunk. --[[Joey]]
-
->> I have just tested ikiwiki-2.5. The code in question still looks
->> the same, and the patch is still needed for making the graphviz
->> plug-in work in preview mode here.
-
->>> No, the relevant code is just above the bit you patched. Notice that in
->>> preview mode, it returns an img tag with the graphviz drawing embedded
->>> in it, using base64 encoding. Unless you can show me why that doesn't
->>> work, I still think this bug is done. --[[Joey]]
-
 >> Here is an updated patch againt ikiwiki-2.5:
 
+>>> [[Applied|done]], thanks. --[[Joey]]
 
     --- IkiWiki/Plugin/graphviz.pm.orig	2007-07-27 11:35:05.000000000 +0200
     +++ IkiWiki/Plugin/graphviz.pm	2007-07-27 11:36:02.000000000 +0200
