--- a/debian/changelog
+++ b/debian/changelog
@@ -4,8 +4,9 @@ ikiwiki (2.6) UNRELEASED; urgency=low
     various reviewers.
   * Fix problems with previewing in the graphviz plugin. Thanks,
     HenrikBrixAndersen.
+  * Allow raw html in the rst plugin.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 29 Jul 2007 18:34:13 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 29 Jul 2007 18:38:36 -0400
 
 ikiwiki (2.5) unstable; urgency=low
 
