--- a/doc/bugs/rst_tweak.mdwn
+++ b/doc/bugs/rst_tweak.mdwn
@@ -2,6 +2,9 @@ rst.pm disallows raw HTML input. (It's meant as a security feature.)
 IkiWiki generates HTML in rst files pretty much all the time. As
 such, we should enable raw HTML support. --Ethan
 
+> [[done]], although I did add a news item about it, since it could break
+> the security of certian setups that don't use the htmlscrubber. --[[Joey]]
+
 <pre>
 Index: IkiWiki/Plugin/rst.pm
 ===================================================================
