web commit by NicolasLimare

--- a/doc/todo/absolute_urls_in_wikilinks.mdwn
+++ b/doc/todo/absolute_urls_in_wikilinks.mdwn
@@ -2,4 +2,4 @@
 
 An option to have absolute urls in wikilinks instead of relative ones would be useful, 
 for pages included into other pages out of the wiki rendering process (shtml for example)
-since these pages can be included from a subdir.
+since these pages can be included from a subdir. Ditto, links from \[[ inline ..]] or \[[map ..]].
