web commit by http://ethan.betacantrips.com/: confused response

--- a/doc/todo/absolute_urls_in_wikilinks.mdwn
+++ b/doc/todo/absolute_urls_in_wikilinks.mdwn
@@ -3,3 +3,8 @@
 An option to have absolute urls in wikilinks instead of relative ones would be useful, 
 for pages included into other pages out of the wiki rendering process (shtml for example)
 since these pages can be included from a subdir. Ditto, links from \[[ inline ..]] or \[[map ..]].
+
+> You can make a wikilink absolute by prefixing it with a /, see 
+> [[subpage/linkingrules/]]. Pagespecs match absolute by default. But what do
+> you mean "included from a subdir"? If you inline a page, its links shouldn't 
+> change. --Ethan
