web commit by http://gaewyn.livejournal.com/

--- a/doc/sandbox.mdwn
+++ b/doc/sandbox.mdwn
@@ -25,6 +25,8 @@ OpenID test. It works!!
 
 Hupple hupple hupple hupple snork.
 
+Exactly my point!
+
 Test..
 
 There are Polish diacritical characters: ą, ć, ę, ł, ń, ó, ś, ż, ź.
