web commit by HenrikBrixAndersen: Please don't

--- a/doc/todo/Add_label_to_search_form_input_field.mdwn
+++ b/doc/todo/Add_label_to_search_form_input_field.mdwn
@@ -18,4 +18,8 @@ The patch below adds a label for the field to improve usability:
 > sites, but so far the only way I've seen to do it is by inserting a
 > nasty lump of javascript. --[[Joey]]
 
+>> Please don't do that, it is a bad idea on so many levels :) See e.g. 
+>> <http://universalusability.com/access_by_design/forms/auto.html> for
+>> an explanation why. --[[HenrikBrixAndersen]]
+
 [[wishlist]]
