web commit by BartMassey: more discussion of GIT fixes

--- a/doc/setup/discussion.mdwn
+++ b/doc/setup/discussion.mdwn
@@ -18,6 +18,7 @@ update. --[[JoshTriplett]]
 
 Furthermore the git instructions should be changed to move the *.ikiwiki*
 directory back into the wiki's working copy directory, isn't it? --[[tschwinge]]
+Yes, I think so.  I will clean these instructions up unless somebody tells me we're missing something fundamental. --[[BartMassey]]
 
 Curious as to why support for CVS is not built in. --[[Luther]]
 
