--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -67,7 +67,7 @@ Personal sites and blogs
 * [Carl Worth's Boring Web Pages](http://www.cworth.org)
 * [Charles Mauch](http://xtermin.us)'s website uses ikiwiki.
 * I keep my personal and project notes in a private ikiwiki - it's the perfect tool for this task. - [h01ger](http://layer-acht.org/)
-* [Nicolas Limare (nil)](http://poivron.org/~nil/)
+* NicolasLimare ([nil](http://poivron.org/~nil/)+[lab](http://www.ann.jussieu.fr/~limare/)+[id](http://nicolas.limare.net/))
 * [Patrick Winnertz (winnie)(https://www.der-winnie.de)
 
 Please feel free to add your own ikiwiki site!
