web commit by http://camrdale.myopenid.com/: Changed my website address

--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -61,7 +61,7 @@ Personal sites and blogs
 * [Effective Programming](http://effectiveprogramming.com/)
 * [Embedded Moose](http://embeddedmoose.com), Andrew Greenberg's personal and consulting page.
 * [Chez Fred](http://fred.ccheznous.org)
-* [Cameron Dale](http://www.cs.sfu.ca/~camerond/personal/)
+* [Cameron Dale](http://www.camrdale.org/)
 * [[KarlMW]]'s [homepage](http://mowson.org/karl/), generated with an ikiwiki 
   [asciidoc plugin](http://mowson.org/karl/colophon/).
 * [Carl Worth's Boring Web Pages](http://www.cworth.org)
