--- a/doc/bugs/Monotone_rcs_support.mdwn
+++ b/doc/bugs/Monotone_rcs_support.mdwn
@@ -8,3 +8,5 @@ At the moment it supports basic committing and listing recent changes.  It does 
 while there is support for simultaneous commits (e.g. conflicts), it is untested and if it happens to work would leave the repository in an unmerged state.
 
 But it is better than nothing.
+
+Note: This patch requires the Monotone perl module, which is only available in Monotone 0.36 or later.  The module is in the Monotone contrib/ directory.  While 0.36 is relatively new, that Monotone module itself will work with a monotone binary back quite a few releases.
