--- a/doc/bugs/Monotone_rcs_support.mdwn
+++ b/doc/bugs/Monotone_rcs_support.mdwn
@@ -9,4 +9,8 @@ while there is support for simultaneous commits (e.g. conflicts), it is untested
 
 But it is better than nothing.
 
+> For sure. The conflict issue seems like the main problem. I might just add it to ikiwiki and mark is as experimental and known buggy though. :-) --[[Joey]]
+
 Note: This patch requires the Monotone perl module, which is only available in Monotone 0.36 or later.  The module is in the Monotone contrib/ directory.  While 0.36 is relatively new, that Monotone module itself will work with a monotone binary back quite a few releases.
+
+[[tag patch]]
