--- a/doc/about_rcs_backends.mdwn
+++ b/doc/about_rcs_backends.mdwn
@@ -177,3 +177,7 @@ If you have any question or suggestion about the Mercurial backend
 please refer to [Emanuele](http://nerd.ocracy.org/em/)
 
 ## [[tla]]
+
+## [[bugs/Monotone_rcs_support]]
+
+Available as an unfinished patch curently.
