--- a/doc/ikiwikiusers.mdwn
+++ b/doc/ikiwikiusers.mdwn
@@ -19,6 +19,7 @@ Projects
 * [debian-community.org](http://debian-community.org/)
 * The [cairo graphics library](http://cairographics.org/) website.
 * [Nouvelles Informations Positives Libres community](http://wiki.nipl.net/)
+* The [Portland State Aerospace Society](http://psas.pdx.edu) website.  Converted from a combination of TWiki and MoinMoin to ikiwiki, including full history ([[Git]] backend).
 
 Personal sites and blogs
 ========================
