--- a/doc/todo/parse_debian_packages.mdwn
+++ b/doc/todo/parse_debian_packages.mdwn
@@ -8,6 +8,11 @@ a helpful index page to a small repository, listing all the
 packages, and possibly their descriptions as well, with links to
 download them or their sources.
 
+> It's a good idea, I think there are probably several ways to approach it
+> that would all yeild good, though differing results. Maybe with
+> something like this I'd actually get around to posting ikiwiki debs to
+> the repo. ;-) --[[Joey]]
+
 I think this is easily possible (and I might be able to work on
 it myself, though Perl is not my strong suit). The trickiest
 part is probably figuring out how and when to parse the packages.
@@ -18,12 +23,26 @@ reprepro/debarchiver/etc.). Or, the packages could be kept
 separate, with only a link given to the plugin, though changes
 would then not be picked up until the ikiwiki is recompiled.
 
+
+> This could be done by adding a hook to reprepro/whatever that calls
+> ikiwiki --refresh at the end of updating a repo. (I don't
+> remember if reprepro has such hooks; mini-dinstall certianly does.)
+> 
+> For ikiwiki to notice that the Packages file outside its tree has
+> changed and things need to be updated, a `needsbuild` hook could be
+> used. This seems very doable.
+
 Perhaps a better (though infinitely more complicated) solution
 would be to include the reprepro/debarchiver functionality in
 ikiwiki. Packages could be posted, like blog entries, and tagged
 with the target distribution (sid/lenny/etc.). Then compiling
 ikiwiki would generate the needed Packages/Release files
 automatically.
+
+> I like the idea of
+> using packages as "source" and spitting out apt repos, though I'd not
+> want to use it for a big repo, and I'd ideally want to keep the packages
+> in a different svn repo, pulled in via svn:externals.
 
 Just some thoughts I had, hope it's not too crazy.<br>
 --Cameron
